src/tests/snapshots/ppl__tests__references.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%Integer = type { ptr }
%MemoryAddress = type { ptr }
%"Type<I32>" = type { ptr }
%"Type<I32>Impl" = type { %String, %Integer }
%String = type { ptr }

@n = global %Integer zeroinitializer
@0 = private unnamed_addr constant [4 x i8] c"I32\00", align 1
@address = global %MemoryAddress zeroinitializer
@value = global ptr null
@1 = private unnamed_addr constant [4 x i8] c"I32\00", align 1

define void @main.execute() !dbg !3 {
  call void @initialize(), !dbg !7
  call void @initialize.1(), !dbg !8
  call void @initialize.2(), !dbg !9
  %1 = load ptr, ptr @value, align 8, !dbg !10
  %2 = call %Integer @integer_from_i64(i64 0), !dbg !11
  %3 = call i32 @integer_as_i32(%Integer %2), !dbg !11
  store i32 %3, ptr %1, align 4, !dbg !11
  %4 = load ptr, ptr @value, align 8, !dbg !12
  %5 = load i32, ptr %4, align 4, !dbg !12
  call void @"println <:I32>"(i32 %5), !dbg !12
  %6 = load ptr, ptr @value, align 8, !dbg !13
  %7 = call %Integer @integer_from_i64(i64 1), !dbg !14
  %8 = call i32 @integer_as_i32(%Integer %7), !dbg !14
  store i32 %8, ptr %6, align 4, !dbg !14
  %9 = load ptr, ptr @value, align 8, !dbg !15
  %10 = load i32, ptr %9, align 4, !dbg !15
  call void @"println <:I32>"(i32 %10), !dbg !15
  call void @free_memory(ptr @address), !dbg !16
  call void @destroy_integer(ptr @n), !dbg !17
  br label %return, !dbg !17

return:                                           ; preds = %0
  ret void
}

define private void @initialize() !dbg !18 {
  %1 = alloca %"Type<I32>", align 8, !dbg !19
  %"Type<I32>.data" = getelementptr inbounds %"Type<I32>", ptr %1, i32 0, i32 0, !dbg !19
  %"Type<I32>.name" = getelementptr inbounds %"Type<I32>Impl", ptr %"Type<I32>.data", i32 0, i32 0, !dbg !19
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 3), !dbg !20
  store %String %2, ptr %"Type<I32>.name", align 8, !dbg !20
  %"Type<I32>.size" = getelementptr inbounds %"Type<I32>Impl", ptr %"Type<I32>.data", i32 0, i32 1, !dbg !20
  %3 = call %Integer @integer_from_i64(i64 4), !dbg !20
  store %Integer %3, ptr %"Type<I32>.size", align 8, !dbg !20
  %4 = load %"Type<I32>", ptr %1, align 8, !dbg !20
  %5 = call %Integer @"size of <:Type<I32>>"(%"Type<I32>" %4), !dbg !20
  store %Integer %5, ptr @n, align 8, !dbg !20
  br label %return, !dbg !20

return:                                           ; preds = %0
  ret void
}

define private %Integer @"size of <:Type<I32>>"(%"Type<I32>" %0) !dbg !21 {
  %return_value = alloca %Integer, align 8
  %ty = alloca %"Type<I32>", align 8
  store %"Type<I32>" %0, ptr %ty, align 8
  %2 = getelementptr inbounds %"Type<I32>", ptr %ty, i32 0, i32 0, !dbg !22
  %size = getelementptr inbounds %"Type<I32>Impl", ptr %2, i32 0, i32 1, !dbg !22
  %3 = call %Integer @clone_integer(ptr %size), !dbg !22
  %"$tmp@4252" = alloca %Integer, align 8, !dbg !22
  store %Integer %3, ptr %"$tmp@4252", align 8, !dbg !22
  %4 = load %Integer, ptr %"$tmp@4252", align 8, !dbg !22
  store %Integer %4, ptr %return_value, align 8, !dbg !22
  br label %return, !dbg !22

return:                                           ; preds = %1
  %5 = load %Integer, ptr %return_value, align 8
  ret %Integer %5
}

declare %Integer @clone_integer(ptr)

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define private void @initialize.1() !dbg !23 {
  %1 = call %Integer @clone_integer(ptr @n), !dbg !24
  %2 = call %MemoryAddress @allocate_n_bytes(%Integer %1), !dbg !24
  store %MemoryAddress %2, ptr @address, align 8, !dbg !24
  br label %return, !dbg !24

return:                                           ; preds = %0
  ret void
}

declare %MemoryAddress @allocate_n_bytes(%Integer)

define private void @initialize.2() !dbg !25 {
  %1 = alloca %"Type<I32>", align 8, !dbg !26
  %"Type<I32>.data" = getelementptr inbounds %"Type<I32>", ptr %1, i32 0, i32 0, !dbg !26
  %"Type<I32>.name" = getelementptr inbounds %"Type<I32>Impl", ptr %"Type<I32>.data", i32 0, i32 0, !dbg !26
  %2 = call %String @string_from_c_string_and_length(ptr @1, i64 3), !dbg !27
  store %String %2, ptr %"Type<I32>.name", align 8, !dbg !27
  %"Type<I32>.size" = getelementptr inbounds %"Type<I32>Impl", ptr %"Type<I32>.data", i32 0, i32 1, !dbg !27
  %3 = call %Integer @integer_from_i64(i64 4), !dbg !27
  store %Integer %3, ptr %"Type<I32>.size", align 8, !dbg !27
  %4 = load %"Type<I32>", ptr %1, align 8, !dbg !27
  %5 = call ptr @read_memory(%"Type<I32>" %4, ptr @address), !dbg !28
  store ptr %5, ptr @value, align 8, !dbg !28
  br label %return, !dbg !28

return:                                           ; preds = %0
  ret void
}

declare ptr @read_memory(%"Type<I32>", ptr)

declare i32 @integer_as_i32(%Integer)

define private void @"println <:I32>"(i32 %0) !dbg !29 {
  %x = alloca i32, align 4
  store i32 %0, ptr %x, align 4
  %2 = load i32, ptr %x, align 4, !dbg !30
  %3 = call %String @i32_as_string(i32 %2), !dbg !30
  call void @"println <:String>"(%String %3), !dbg !30
  br label %return, !dbg !31

return:                                           ; preds = %1
  ret void
}

declare void @"println <:String>"(%String)

declare %String @i32_as_string(i32)

declare void @free_memory(ptr)

declare void @destroy_integer(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 0, column: 8, scope: !3)
!8 = !DILocation(line: 2, column: 14, scope: !3)
!9 = !DILocation(line: 3, column: 12, scope: !3)
!10 = !DILocation(line: 4, scope: !3)
!11 = !DILocation(line: 4, column: 8, scope: !3)
!12 = !DILocation(line: 5, column: 8, scope: !3)
!13 = !DILocation(line: 6, scope: !3)
!14 = !DILocation(line: 6, column: 8, scope: !3)
!15 = !DILocation(line: 7, column: 8, scope: !3)
!16 = !DILocation(line: 8, column: 5, scope: !3)
!17 = !DILocation(line: 0, scope: !3)
!18 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !3, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!19 = !DILocation(line: 0, column: 16, scope: !18)
!20 = !DILocation(line: 0, scope: !18)
!21 = distinct !DISubprogram(name: "size of <:Type<I32>>", linkageName: "size of <:Type<I32>>", scope: !18, file: !2, line: 8, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!22 = !DILocation(line: 8, column: 12, scope: !21)
!23 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !3, file: !2, line: 2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!24 = !DILocation(line: 2, column: 23, scope: !23)
!25 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !3, file: !2, line: 3, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!26 = !DILocation(line: 3, column: 12, scope: !25)
!27 = !DILocation(line: 0, scope: !25)
!28 = !DILocation(line: 3, column: 19, scope: !25)
!29 = distinct !DISubprogram(name: "println <:I32>", linkageName: "println <:I32>", scope: !3, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!30 = !DILocation(line: 8, column: 12, scope: !29)
!31 = !DILocation(line: 8, column: 3, scope: !29)
