src/tests/snapshots/ppl__tests__star.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
`println <:Integer>`(`<:Integer> + <:Integer>`(2, `<:Integer> * <:Integer>`(2, 2)))

==MONOMORPHIZED==


@mangle_as("integer_as_string")
fn String from <$arg0: Integer> -> String

fn println <x: Integer> -> None:
	let $tmp@176: None = `println <:String>`(`String from <:Integer>`((x:Integer)))
	return ($tmp@176:None)
